--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -16,6 +16,8 @@
 	<string>hook</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>PlexClientPlatforms</key>
+	<string>MacOSX</string>
 	<key>PlexFrameworkVersion</key>
 	<string>1</string>
 	<key>PlexPluginMode</key>
@@ -25,6 +27,6 @@
 		<string>Flash</string>
 	</array>
 	<key>PlexPluginDebug</key>
-	<string>1</string>
+	<string>0</string>
 </dict>
 </plist>
