--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -19,13 +19,13 @@
 	<key>PlexClientPlatforms</key>
 	<string>MacOSX,LGTV</string>
 	<key>PlexFrameworkVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>PlexMediaContainer</key>
 	<array>
 		<string>Flash</string>
 	</array>
-	<key>PlexPluginDebug</key>
-	<string>0</string>
+	<key>PlexPluginConsoleLogging</key>
+	<string>1</string>
 	<key>PlexPluginMode</key>
 	<string>AlwaysOn</string>
 </dict>
